@@ -6,7 +6,7 @@ int main (void)
 {
   CFMutableStringRef str1;
   CFMutableStringRef str2;
-  CFStringRef constant1 = __CFStringMakeConstantString("testing!");
+  CFStringRef constant1 = __CFStringMakeConstantString("Test string.");
   CFStringRef constant2 = __CFStringMakeConstantString("   test  ");
   
   str1 = CFStringCreateMutable (NULL, 0);
@@ -16,13 +16,16 @@ int main (void)
   str2 = CFStringCreateMutableCopy (NULL, CFStringGetLength(str1), str1);
   
   CFStringUppercase (str2, NULL);
-  PASS_CFEQ(str2, __CFStringMakeConstantString("TESTING!"), "Uppercase mapping works.");
-  
-  CFStringLowercase (str2, NULL);
-  PASS_CFEQ(str2, constant1, "Lowercase mapping works"); // Reversed.
+  PASS_CFEQ(str2, __CFStringMakeConstantString("TEST STRING."), "Uppercase mapping works.");
   
   CFStringCapitalize (str2, NULL);
-  PASS_CFEQ(str2, __CFStringMakeConstantString("Testing!"), "Capitalize mapping works.");
+  PASS_CFEQ(str2, __CFStringMakeConstantString("Test String."), "Capitalize mapping works.");
+  
+  CFStringLowercase (str2, NULL);
+  PASS_CFEQ(str2, __CFStringMakeConstantString("test string."), "Lowercase mapping works");
+  
+  CFStringReplace (str2, CFRangeMake(0, CFStringGetLength(str1)), constant1);
+  PASS_CFEQ(str2, constant1, "String is replaced whole.");
   
   CFRelease(str1);
   CFRelease(str2);
@@ -33,8 +36,8 @@ int main (void)
   PASS_CFEQ(str1, __CFStringMakeConstantString("test"),
     "String is trimmed correctly.");
   
-  CFStringReplace (str1, CFRangeMake(1, 3), constant1);
-  PASS_CFEQ(str1, __CFStringMakeConstantString("ttesting!"),
+  CFStringReplace (str1, CFRangeMake(1, 2), constant1);
+  PASS_CFEQ(str1, __CFStringMakeConstantString("tTest string.t"),
     "String replacement works");
   
   CFRelease(str1);
